fixed z-index of contact form

--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -40,7 +40,7 @@ footer {
                 display: flex;
                 flex-direction: column;
                 position: relative;
-                z-index: 5;
+                z-index: 0;
                 margin: 0 auto;
                 .footerBackText {
                     font-size: 17rem;
