--- a/styles/style.css
+++ b/styles/style.css
@@ -736,7 +736,7 @@ header .wrapper .topNav .mobileMenu {
   height: 100vh;
   position: fixed;
   top: 0;
-  z-index: 20;
+  z-index: 100;
   right: -100%;
   transition: 0.4s ease-in;
 }
@@ -829,7 +829,7 @@ footer .wrapper .footerMainContainer .formContainer {
   display: flex;
   flex-direction: column;
   position: relative;
-  z-index: 5;
+  z-index: 0;
   margin: 0 auto;
 }
 footer .wrapper .footerMainContainer .formContainer .footerBackText {
